유저 주소 -> x,y 변환 및 저장 로직 업데이트